[project]
name = "bdm-enhancement-sim"
version = "0.1.0"
description = "Black Desert Mobile Enhancement System Simulator"
requires-python = ">=3.10"
dependencies = ["textual>=0.47.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
bdm-sim = "src.cli:main"
bdm-tui = "src.tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
